refactored and simplified repository interfaces and implementation excessively